--- a/ShoppingMaui/MainPage.xaml
+++ b/ShoppingMaui/MainPage.xaml
@@ -3,51 +3,51 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShoppingMaui.MainPage" BackgroundColor="Black">
 
+    <RefreshView x:Name="refreshView" Refreshing="refreshView_Refreshing" IsRefreshing="{Binding Source={x:Reference refreshView}, Path=IsRefreshing}">
+        <Grid>
 
-    <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <Frame Grid.Row="0" BackgroundColor="Black" Padding="20" BorderColor="Black" CornerRadius="0">
-            <Label Text="Kauppalista" HorizontalTextAlignment="Center"
+            <Frame Grid.Row="0" BackgroundColor="Black" Padding="20" BorderColor="Black" CornerRadius="0">
+                <Label Text="Kauppalista" HorizontalTextAlignment="Center"
                    TextColor="Orange" FontSize="24"/>
-        </Frame>
+            </Frame>
 
-        <Button Grid.Row="1" x:Name="kerätty_nappi" Text="Valitse poimittava tuote listalta"
+            <Button Grid.Row="1" x:Name="kerätty_nappi" Text="Valitse poimittava tuote listalta"
                 IsVisible="true" Margin="10,10,10,10" FontSize="24" 
                 Padding="15, 15, 15, 15"  BackgroundColor="GreenYellow" TextColor="Black"/>
 
 
-        <Label x:Name = "Loading_label" TextColor="White" FontSize="24"  Grid.Row="2" Text="Ladataan ostoslistaa..."/>
-        
+            <Label x:Name = "Loading_label" TextColor="White" FontSize="24"  Grid.Row="2" Text="Ladataan ostoslistaa..."/>
 
-        <!-- Vieritettävä sisältö -->
-        <ScrollView Grid.Row="3">
-            <ListView x:Name="itemList" SelectionMode="Single" Margin="20, 0">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
 
-                            <ContentView Padding="3">
-                                <Frame BorderColor="Silver" Padding="2">
+            <!-- Vieritettävä sisältö -->
+            <ScrollView Grid.Row="3">
+                <ListView x:Name="itemList" SelectionMode="Single" Margin="20, 0">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
 
-                                    <HorizontalStackLayout BackgroundColor="AliceBlue" Padding="0, 2">
+                                <ContentView Padding="3">
+                                    <Frame BorderColor="Silver" Padding="2">
 
-                                        <Label Text="{Binding Item}"
+                                        <HorizontalStackLayout BackgroundColor="AliceBlue" Padding="0, 2">
+
+                                            <Label Text="{Binding Item}"
                                                TextColor="Purple"
                                                FontSize="22"
                                                VerticalOptions="StartAndExpand" 
                                            Margin="20, 0, 0, 0"/>
 
 
-                                        <Label Text="{Binding Amount}"
+                                            <Label Text="{Binding Amount}"
                                          TextColor="Purple"
                                            FontSize="22"
                                            VerticalOptions="StartAndExpand"
@@ -55,7 +55,7 @@
                                              Margin="5, 0, 0, 0"/>
 
 
-                                        <Label Text="KPL"
+                                            <Label Text="KPL"
                                          TextColor="Purple"
                                            FontSize="22"
                                            VerticalOptions="StartAndExpand"
@@ -63,27 +63,29 @@
                                              Margin="5, 0, 0, 0"/>
 
 
-                                    </HorizontalStackLayout>
-                                    
-                                </Frame>
-                            </ContentView>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </ScrollView>
+                                        </HorizontalStackLayout>
+
+                                    </Frame>
+                                </ContentView>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </ScrollView>
 
 
 
-        <Button Grid.Row="4" x:Name="addPageBtn" IsVisible="True" Text="Lisää uusi tavara" Padding="20" FontSize="26"
+            <Button Grid.Row="4" x:Name="addPageBtn" Clicked="addPageBtn_Clicked" IsVisible="True" Text="Lisää uusi tavara" Padding="20" FontSize="26"
             Margin="40,10,40,10" />
 
 
-        <Frame Grid.Row="5" BackgroundColor="Black" BorderColor="Black" Padding="70, 20, 40, 50" VerticalOptions="EndAndExpand">
-            <Label Text="Sujuvaa ostosten hallintaa" TextColor="Orange" FontSize="20"/>
-        </Frame>
+            <Frame Grid.Row="5" BackgroundColor="Black" BorderColor="Black" Padding="70, 20, 40, 50" VerticalOptions="EndAndExpand">
+                <Label Text="Sujuvaa ostosten hallintaa" TextColor="Orange" FontSize="20"/>
+            </Frame>
 
 
-    </Grid>
+        </Grid>
+
+    </RefreshView>
 
 </ContentPage>
